--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-session": "^1.17.3",
     "mysql": "^2.18.1",
     "mysql2": "^3.6.3",
+    "node-localstorage": "^3.0.5",
     "nodemon": "^3.0.1"
   }
 }
